--- a/src/App.module.css
+++ b/src/App.module.css
@@ -13,10 +13,15 @@
 html {
     box-sizing: border-box;
     scroll-behavior: smooth;
+    background-color: bgColor;
+    background-image: url(../src/assets/img/bg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 100%;
 }
 
 body {
-    background-color: bgColor;
     font-family: regular;
     font-style: normal;
     width: 280px;
@@ -44,10 +49,12 @@ h4,
 h5,
 h6 {
     margin: 0;
+    color: #10375d;
 }
 
 p {
     margin: 0;
+    color: #05647a;
 }
 
 ul,
