--- a/src/components/Navigation/MobileNav/MobileNav.module.css
+++ b/src/components/Navigation/MobileNav/MobileNav.module.css
@@ -13,6 +13,7 @@
     background-color: initial;
     outline: none;
     cursor: pointer;
+    /* transition: 1s; */
 }
 
 .navBurgerBar {
@@ -24,6 +25,7 @@
     top: 18px;
     left: 12px;
     cursor: pointer;
+    transition: 1s;
 }
 
 .navBurgerBar::after,
@@ -34,14 +36,17 @@
     width: 16px;
     background-color: #10375d;
     border-radius: 5px;
+    transition: 1s;
 }
 
 .navBurgerBar::after {
     top: 4px;
+    /* transition: 1s; */
 }
 
 .navBurgerBar::before {
     top: -4px;
+    /* transition: 1s; */
 }
 
 .navBurgerBarClose {
@@ -58,12 +63,15 @@
     width: 16px;
     background-color: #10375d;
     border-radius: 5px;
+    transition: 1s;
 }
 
 .navBurgerBarClose::after {
     transform: rotate(45deg);
+    transition: 1s;
 }
 
 .navBurgerBarClose::before {
     transform: rotate(-45deg);
+    transition: 1s;
 }
