--- a/src/components/Navigation/NavList/NavList.module.css
+++ b/src/components/Navigation/NavList/NavList.module.css
@@ -35,6 +35,7 @@
 }
 
 .navItem {
+    width: fit-content;
     margin: 0 0 16px 0;
 }
 
@@ -68,10 +69,11 @@
         position: relative;
     }
     .navList {
-        width: 940px;
+        width: 400px;
         display: flex;
         padding: 0;
-        justify-content: space-evenly;
+        background-color: transparent;
+        justify-content: space-between;
     }
     .navItem {
         margin: 0 0 16px 0;
