--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,5 +1,44 @@
-.nav {
+.headerContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin: 20px auto 0;
+    /* position: fixed;
+    right: 0px;
+    z-index: 25; */
+}
+
+.sectionPhoto {
+    border-radius: 50%;
+    border: solid 2px #10375d4d;
+    filter: sepia(0%);
+    transition: 1s;
+}
+
+.sectionPhoto:hover,
+.sectionPhoto:focus,
+.sectionPhoto:active {
+    border: solid 2px #10375d99;
+    filter: sepia(15%);
+    transition: 1s;
+}
+
+.logo {
+    margin: 0;
+    padding: 0;
+}
+
+.nav {
     display: flex;
     justify-content: flex-end;
+    /* position: fixed;
+    right: 0px;
+    z-index: 25; */
 }
+
+
+/* @media (min-width: 375px) {
+    .nav {
+        right: 8px;
+    }
+} */
