projects structure for experience route started

--- a/src/index.module.css
+++ b/src/index.module.css
@@ -10,6 +10,11 @@
 @value laptop from breakpoints;
 @value desktop from breakpoints;
 @value large-desktop from breakpoints;
+html,
+body {
+    /* height: 100%; */
+}
+
 html {
     box-sizing: border-box;
     scroll-behavior: smooth;
@@ -25,12 +30,13 @@ body {
     font-family: regular;
     font-style: normal;
     width: 280px;
+    /* height: auto; */
     margin: 0 auto;
     background-color: bgColor;
     background: url(../src/assets/img/bg.png) no-repeat center center fixed;
     background-size: cover;
-    width: auto;
-    height: auto;
+    display: flex;
+    flex-direction: column;
 }
 
 *,
@@ -74,6 +80,9 @@ a {
     display: block;
     text-decoration: none;
     outline: none;
+    /* height: auto;
+    width: auto;
+    cursor: pointer; */
 }
 
 button:hover {
