--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,7 +11,6 @@
 } */
 
 .mainContainer {
-    /*  */
-    min-height: 100vh;
-    margin: 0 0 48px 0;
+    min-height: calc(100vh - 60px);
+    margin: 0 0 12px 0;
 }
