--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: flex-end;
     border-top: solid 1px #10375d;
+    flex-shrink: 0;
     /* position: fixed;
     bottom: 1px;
     right: 1px; */
