--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,6 +11,8 @@
 } */
 
 .mainContainer {
-    min-height: calc(100vh - 60px);
+    min-height: calc(100vh - 64px);
     margin: 0 0 12px 0;
+    height: 100%;
+    flex: 1 0 auto;
 }
