--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,10 +2,8 @@
     display: flex;
     justify-content: flex-end;
     border-top: solid 1px #10375d;
-    flex-shrink: 0;
-    /* position: fixed;
-    bottom: 1px;
-    right: 1px; */
+    flex: 0 0 auto;
+    margin: -62px 0 0 0;
 }
 
 .footerContainer {
@@ -15,16 +13,17 @@
 }
 
 .footerItem {
+    transition: 223ms;
     padding: 12px;
 }
 
-.footerItem:hover {
+.footerItem:hover,
+.footerItem:focus {
+    transition: 223ms;
     transform: scale(1.1);
 }
 
-.footerItemLink {
-    /*  */
-}
+.footerItemLink {}
 
 .footerItemIcon {
     width: 18px;
