--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -12,7 +12,7 @@
     border-radius: 50%;
     border: solid 2px #10375d4d;
     filter: sepia(0%);
-    transition: 1s;
+    transition: 223ms;
 }
 
 .sectionPhoto:hover,
@@ -20,7 +20,7 @@
 .sectionPhoto:active {
     border: solid 2px #10375d99;
     filter: sepia(15%);
-    transition: 1s;
+    transition: 223ms;
 }
 
 .logo {
