--- a/src/components/UI/Section/Section.module.css
+++ b/src/components/UI/Section/Section.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     flex-wrap: wrap;
     text-align: center;
-    margin: 12px 0 0 0;
+    margin: 0 0 12px 0;
 }
 
 .sectionHeading {
