--- a/src/pages/Experience/Experience.module.css
+++ b/src/pages/Experience/Experience.module.css
@@ -4,7 +4,8 @@
     align-items: center;
     flex-wrap: wrap;
     text-align: center;
-    margin: 12px 0 0 0;
+    margin: 0 auto;
+    /* margin: 12px 0 0 0; */
 }
 
 .sectionHeading {
